--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^7.1.2",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "fuse.js": "^6.2.1",
     "node-sass": "^4.14.1",
     "nodemon": "^2.0.4",
     "pg": "^8.2.1",
