--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "fuse.js": "^6.2.1",
+    "moment": "^2.27.0",
     "node-sass": "^4.14.1",
     "nodemon": "^2.0.4",
     "pg": "^8.2.1",
