--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "moment": "^2.27.0",
     "node-sass": "^4.14.1",
     "nodemon": "^2.0.4",
+    "path": "^0.12.7",
     "pg": "^8.2.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
