--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "path": "^0.12.7",
     "pg": "^8.2.1",
     "react": "^16.13.1",
+    "react-app-env": "^1.2.3",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
@@ -24,8 +25,7 @@
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
     "sequelize": "^5.21.11",
-    "styled-components": "^5.1.0",
-    "webpack": "^4.42.0"
+    "styled-components": "^5.1.0"
   },
   "scripts": {
     "start": "nodemon api",
