--- a/package.json
+++ b/package.json
@@ -3,33 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.9.14",
-    "@material-ui/icons": "^4.9.1",
-    "@material-ui/lab": "^4.0.0-alpha.56",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "cors": "^2.8.5",
-    "fuse.js": "^6.2.1",
-    "material-table": "^1.68.0",
-    "node-sass": "^4.14.1",
-    "nodemon": "^2.0.4",
-    "path": "^0.12.7",
-    "pg": "^8.2.1",
-    "react": "^16.13.1",
-    "react-app-env": "^1.2.3",
-    "react-dom": "^16.13.1",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
-    "react-swipeable-views": "^0.13.9",
-    "redux-devtools-extension": "^2.13.8",
-    "redux-thunk": "^2.3.0",
-    "sequelize": "^5.21.11",
-    "styled-components": "^5.1.0"
+    "react-scripts": "^3.4.3"
   },
   "scripts": {
-    "start": "nodemon api",
-    "start-client": "react-scripts start",
+    "start": "nodemon server",
+    "start2": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -50,12 +28,18 @@
     ]
   },
   "devDependencies": {
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.56",
+    "material-table": "^1.68.1",
     "moment": "^2.27.0",
-    "prop-types": "^15.7.2",
-    "react-redux": "^7.2.1",
+    "node-sass": "^4.14.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "react-router": "^5.2.0",
-    "redux": "^4.0.5"
+    "react-router-dom": "^5.2.0",
+    "react-swipeable-views": "^0.13.9",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0"
   }
 }
