--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "start": "nodemon server",
     "start2": "react-scripts start",
-    "heroku-postbuild": "yarn && yarn run build",
+    "build": "react-scripts build && (cd server && yarn install)",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
