--- a/package.json
+++ b/package.json
@@ -3,10 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react-scripts": "^3.4.3"
+    "react-scripts": "^3.4.3",
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.56",
+    "material-table": "^1.68.1",
+    "moment": "^2.27.0",
+    "node-sass": "^4.14.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
+    "react-swipeable-views": "^0.13.9",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
-    "start": "nodemon (../server/index.js)",
+    "start": "nodemon server/index.js",
     "start2": "react-scripts start",
     "build": "react-scripts build && (cd server && npm install)",
     "test": "react-scripts test",
@@ -26,20 +39,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@material-ui/core": "^4.11.0",
-    "@material-ui/icons": "^4.9.1",
-    "@material-ui/lab": "^4.0.0-alpha.56",
-    "material-table": "^1.68.1",
-    "moment": "^2.27.0",
-    "node-sass": "^4.14.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-router": "^5.2.0",
-    "react-router-dom": "^5.2.0",
-    "react-swipeable-views": "^0.13.9",
-    "redux-devtools-extension": "^2.13.8",
-    "redux-thunk": "^2.3.0"
   }
 }
